--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "jest",
+    "test": "mocha ./tests/**/*.spec.js --reporter spec --require esm",
+    "test:coverage": "nyc --reporter=html npm run test",
     "start": "webpack serve",
     "build": "webpack",
     "lint": "eslint -c .eslintrc.js --ext .ts ./src --fix"
@@ -15,6 +16,8 @@
     "-": "0.0.1",
     "@typescript-eslint/eslint-plugin": "^4.11.0",
     "@typescript-eslint/parser": "^4.11.0",
+    "chai": "^4.3.3",
+    "chai-as-promised": "^7.1.1",
     "clean-webpack-plugin": "^3.0.0",
     "copy-webpack-plugin": "^7.0.0",
     "css-loader": "^5.0.1",
@@ -24,10 +27,13 @@
     "eslint-import-resolver-typescript": "^2.3.0",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-prettier": "^3.3.0",
+    "esm": "^3.2.25",
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^4.5.0",
     "mini-css-extract-plugin": "^1.3.3",
+    "mocha": "^8.3.1",
     "node-sass": "^5.0.0",
+    "nyc": "^15.1.0",
     "sass-loader": "^10.1.0",
     "style-loader": "^2.0.0",
     "ts-loader": "^8.0.12",
