--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "start": "webpack serve",
     "clean": "rm -rf dist/*",
     "build": "webpack",
-    "dev": "serve"
+    "dev": "serve",
+    "test": "env TS_NODE_COMPILER_OPTIONS='{\"module\": \"commonjs\" }' mocha -r ts-node/register 'tests/**/*.ts'"
   },
   "devDependencies": {
     "@types/react": "^18.0.0",
@@ -32,5 +33,11 @@
     "webpack-cli": "^4.9.2",
     "webpack-dev-server": "^4.7.4"
   },
-  "dependencies": {}
+  "dependencies": {
+    "@types/chai": "^4.3.4",
+    "@types/mocha": "^10.0.0",
+    "chai": "^4.3.7",
+    "mocha": "^10.1.0",
+    "ts-node": "^10.9.1"
+  }
 }
