--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "laniakea-2",
-  "version": "1.0.0",
+  "name": "react-clone",
+  "version": "0.0.0",
   "description": "",
   "main": "index.html",
   "scripts": {
