--- a/package.json
+++ b/package.json
@@ -1,43 +1,125 @@
 {
-  "name": "react-clone",
-  "version": "0.0.0",
-  "description": "",
+  "name": "laniakea",
+  "author": "Sergey Adamovich",
+  "version": "1.0.0",
+  "description": "Animation Builder",
   "main": "index.html",
+  "license": "MIT",
   "scripts": {
-    "start": "webpack serve",
-    "clean": "rm -rf dist/*",
-    "build": "webpack",
-    "dev": "serve",
-    "test": "env TS_NODE_COMPILER_OPTIONS='{\"module\": \"commonjs\" }' mocha -r ts-node/register 'tests/**/*.ts'"
+    "start": "webpack serve --config ./config/webpack.dev.js",
+    "clean": "rm -rf ./dist",
+    "build": "webpack --config ./config/webpack.prod.js",
+    "test": "jest",
+    "build:storybook": "node ./config/scripts/storybook.js",
+    "lint": "eslint ./src --ext ts,tsx",
+    "type:check": "node ./config/scripts/typecheck.js",
+    "i18n:check": "node ./config/scripts/i18n-check.js",
+    "test:e2e": "jest -c e2e/jest.config.ts",
+    "test:e2e-hello": "node e2e/hello_puppeteerTest.js",
+    "test:e2e-usersForTest": "node e2e/usersForTest_puppeteerTest.js",
+    "test:e2e-watch": "jest -c e2e/jest.config.ts --watch"
   },
   "devDependencies": {
+    "@babel/core": "^7.20.12",
+    "@babel/preset-env": "^7.20.2",
+    "@babel/preset-typescript": "^7.18.6",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^13.4.0",
+    "@testing-library/user-event": "^14.4.3",
+    "@types/jest": "^29.2.6",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
     "@typescript-eslint/eslint-plugin": "^5.38.0",
     "@typescript-eslint/parser": "^5.38.0",
+    "babel-jest": "^29.4.0",
     "css-loader": "^6.6.0",
     "eslint": "^8.23.1",
+    "eslint-import-resolver-typescript": "^3.5.3",
+    "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-react": "^7.31.8",
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.5.0",
+    "identity-obj-proxy": "^3.0.0",
+    "jest": "^29.4.0",
+    "jest-environment-jsdom": "^29.4.1",
     "mini-css-extract-plugin": "^2.6.1",
     "node-sass": "^7.0.1",
-    "react": "^18.1.0",
-    "react-dom": "^18.1.0",
     "sass-loader": "^12.6.0",
     "serve": "^11.2.0",
     "style-loader": "^3.3.1",
+    "ts-jest": "^29.0.5",
     "ts-loader": "^9.2.6",
+    "ts-node": "^10.9.1",
     "typescript": "^4.5.5",
+    "typescript-plugin-css-modules": "^4.1.1",
     "webpack": "^5.69.1",
     "webpack-cli": "^4.9.2",
+    "@types/expect-puppeteer": "^5.0.3",
+    "@types/jest-environment-puppeteer": "^5.0.3",
+    "@types/puppeteer": "^7.0.4",
+    "jest-puppeteer": "^7.0.1",
+    "puppeteer": "^19.7.2",
     "webpack-dev-server": "^4.7.4"
   },
-  "dependencies": {
-    "@types/chai": "^4.3.4",
-    "@types/mocha": "^10.0.0",
-    "chai": "^4.3.7",
-    "mocha": "^10.1.0",
-    "ts-node": "^10.9.1"
+  "dependencies": {},
+  "jest": {
+    "testEnvironment": "jsdom",
+    "transform": {
+      "^.+\\.tsx?$": "ts-jest"
+    },
+    "setupFilesAfterEnv": [
+      "@testing-library/jest-dom/extend-expect"
+    ],
+    "moduleNameMapper": {
+      "\\.(jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$": "<rootDir>/__mocks__/fileMock.js",
+      "\\.(scss|sass|css)$": "identity-obj-proxy"
+    }
+  },
+  "eslintConfig": {
+    "env": {
+      "browser": true,
+      "es2021": true
+    },
+    "extends": [
+      "plugin:import/recommended"
+    ],
+    "parser": "@typescript-eslint/parser",
+    "parserOptions": {
+      "ecmaVersion": 12,
+      "sourceType": "module"
+    },
+    "plugins": [
+      "@typescript-eslint"
+    ],
+    "rules": {
+      "import/extensions": [
+        "error",
+        "ignorePackages",
+        {
+          "js": "never",
+          "jsx": "never",
+          "ts": "never",
+          "tsx": "never"
+        }
+      ]
+    },
+    "settings": {
+      "import/resolver": {
+        "typescript": {}
+      }
+    }
+  },
+  "babel": {
+    "presets": [
+      [
+        "@babel/preset-env",
+        {
+          "targets": {
+            "node": "current"
+          }
+        }
+      ],
+      "@babel/preset-typescript"
+    ]
   }
 }
