--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -1,6 +1,10 @@
 name: GitHub Actions Demo
 run-name: ${{ github.actor }} is testing out GitHub Actions 🚀
-on: [push]
+on: 
+  push: 
+    branches: [ rct ]
+  pull_request:
+    branches: [ rct ]
 jobs:
   Explore-GitHub-Actions:
     runs-on: ubuntu-latest
@@ -22,3 +26,9 @@ jobs:
         run: yarn build
       - name: type test
         run: yarn type:check
+      - name: unit tests
+        run: yarn test
+      - name: e2e tests
+        run: yarn test:e2e
+      - name: i18n check
+        run: yarn i18n:check
